--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -30,7 +30,7 @@ jobs:
         run: gcloud auth configure-docker
       - name: Build and push docker image 
         run: |
-          docker build -it us.gcr.io/$GCP_PROJECT_ID/nodeappimage:$IMAGE_TAG
+          docker build -it us.gcr.io/$GCP_PROJECT_ID/nodeappimage:$IMAGE_TAG .
           docker push us.gcr.io/$GCP_PROJECT_ID/nodeappimage:$IMAGE_TAG
         working-directory: ./nodeapp
       - uses: hashicorp/setup-terraform@v2
