--- a/.github/workflows/deploy-k8s.yml
+++ b/.github/workflows/deploy-k8s.yml
@@ -39,7 +39,7 @@ jobs:
         working-directory: ./terraform
       - name: Terraform Plan
         run: |
-          terraform plan \
+          terraform plan -destroy \
           -var="region=us-central1" \
           -var="project_id=$GCP_PROJECT_ID" \
           -var="container_image=us.gcr.io/$GCP_PROJECT_ID/nodeappimage:$IMAGE_TAG" \
